# TeamsMCP

./: .env  graph_utils.py  logging.conf  message_store.py  pyproject.toml  requirements.txt  start.sh  teams_mcp.py
