[project]
name = "teams-mcp-server"
version = "0.1.0"
description = "MCP server that fetches messages from Microsoft Teams via Microsoft Graph"
readme = "README.md"
requires-python = ">=3.10"


[project.dependencies]
python = ">=3.10"
msal = "^1.22"
requests = "^2.31"
python-dotenv = "^1.0"
mcp-server = "*" # replace with actual MCP package name if different


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"                                             